--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,8 @@
 :root {
   --border-radius: 30px;
   --vertical-padding: 15px;
-
   --white: #ffffff;
   --dark-blue: #141c3a;
-
   --main-color: #474747;
   --action-color: #00c896;
 }
@@ -61,7 +59,6 @@ li {
   background-color: var(--action-color);
   border-radius: var(--border-radius);
   border: none;
-
   margin-left: 5px;
   width: 50px;
   height: 30px;
@@ -73,7 +70,6 @@ li {
   width: 25px;
   height: 3px;
   margin: 5px auto;
-  -webkit-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
   background-color: white;
 }
@@ -105,11 +101,9 @@ li {
   position: relative;
   top: -200px;
   margin: 5px auto;
-
   width: 100%;
   padding: 0;
   text-align: center;
-
   z-index: -1;
   transition: 0.25s ease-in-out;
 }
@@ -123,7 +117,6 @@ li {
   display: block;
   padding: 5px;
   width: 100%;
-
   text-decoration: underline var(--main-color) 2px;
   font-size: 1.2rem;
   color: white;
@@ -144,7 +137,6 @@ li {
   width: 100%;
   min-height: 100vh;
   height: fit-content;
-
   padding: var(--vertical-padding) 0;
   text-align: center;
 }
@@ -263,7 +255,6 @@ li {
   width: 95%;
   max-width: 450px;
   margin: 0 auto 20px;
-
   transition: all 0.25s ease-in-out;
 }
 
@@ -283,7 +274,6 @@ li {
   left: 50px;
   font-size: 1.6rem;
   color: black;
-
   z-index: -1;
   transition: all 0.25s ease-in-out;
 }
@@ -293,7 +283,6 @@ li {
   width: 100%;
   height: 100%;
   object-fit: cover;
-
   transition: all 0.25s ease-in-out;
 }
 
@@ -310,7 +299,6 @@ li {
   background-color: var(--main-color);
   height: 82vh;
   padding: var(--vertical-padding) 0;
-
   text-align: center;
   color: var(--white);
 }
@@ -341,7 +329,7 @@ textarea {
   padding: 10px;
   width: 100%;
   max-width: 500px;
-  font-family: "europa", sans-serif;
+  font-family: europa, sans-serif;
 }
 
 textarea {
@@ -391,7 +379,6 @@ textarea:focus {
   margin: 0 20px;
   width: 60px;
   height: 60px;
-
   transition: background-color 0.5s ease-out;
 }
 
@@ -400,7 +387,6 @@ textarea:focus {
   top: 9px;
   font-size: 40px;
   color: white;
-
   transition: color 0.5s ease-out;
 }
 
