Moved box-sizing rule to all divs instead of all objects.

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 :root {
   --border-radius: 30px;
   --vertical-padding: 15px;
@@ -39,6 +35,10 @@ body {
   word-spacing: 3px;
   line-height: 1.5;
   color: var(--dark-blue);
+}
+
+div {
+  box-sizing: border-box;
 }
 
 h1,
