--- a/react-portfolio/src/components/Home/styles.css
+++ b/react-portfolio/src/components/Home/styles.css
@@ -34,6 +34,10 @@
 }
 
 @media only screen and (min-width: 1200px) {
+  .about-container {
+    width: 80%;
+  }
+
   .about-line-break {
     display: none;
   }
