--- a/react-portfolio/src/components/Projects/styles.css
+++ b/react-portfolio/src/components/Projects/styles.css
@@ -88,6 +88,10 @@
 }
 
 @media only screen and (min-width: 1200px) {
+  .projects-container {
+    width: 80%;
+  }
+
   .projects-grid {
     grid-template-columns: 31% 31% 31%;
     grid-template-rows: 290px 290px 290px;
