Added main color light

--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -4,8 +4,8 @@
   --white: #fff;
   --font-color: #333;
   --main-color: #fff;
+  --main-color-light: #f0f0f0;
   --action-color: #00ff80;
-
   --action-color-light: #84ffa9;
 }
 
