--- a/react-portfolio/src/components/Home/styles.css
+++ b/react-portfolio/src/components/Home/styles.css
@@ -16,14 +16,16 @@
 }
 
 .about-heading {
-  margin: 50px auto;
-  font-size: 2.1rem;
+  position: relative;
+  top: 60px;
+  font-style: italic;
+  color: var(--font-color);
 }
 
 .about-text {
-  margin: 20px auto;
-  font-size: 1.1rem;
-  line-height: 1.8rem;
+  position: relative;
+  top: 120px;
+  color: var(--font-color);
 }
 
 @media only screen and (min-width: 768px) {
