--- a/react-portfolio/src/components/Skills/styles.css
+++ b/react-portfolio/src/components/Skills/styles.css
@@ -1,5 +1,5 @@
 .skills {
-  background-color: var(--main-color);
+  background-color: var(--main-color-light);
   min-height: 80vh;
   padding: var(--vertical-padding) 0;
   text-align: center;
@@ -10,21 +10,29 @@
   width: 90%;
 }
 
-.skills-container > h1 {
-  color: white;
+.skills-heading {
+  font-style: italic;
+  color: var(--font-color);
 }
 
 .skill-card-container {
+  justify-content: space-between;
   margin: 0 auto;
   width: 100%;
+}
+
+.skill-card-animation-wrapper {
+  width: 95%;
 }
 
 .skill-card {
   background-color: white;
   border-radius: var(--border-radius);
   margin: 20px auto;
-  width: 95%;
+  width: 100%;
+  height: 100%;
   padding: 30px 0;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .skill-icon-container {
@@ -36,34 +44,25 @@
   margin: 10px auto;
 }
 
-.fa-solid {
-  color: white;
+.skill-icon-container > svg {
   position: relative;
-  top: 17px;
-  left: 14px;
-  font-size: 2.2rem;
-}
-
-.fa-laptop-code {
-  left: 13px;
-}
-
-.fa-bug {
-  left: 17px;
+  top: 22%;
+  left: 22%;
+  font-size: 2.5rem;
+  color: white;
 }
 
 .skill-text-section-heading {
-  margin-bottom: 30px;
-  font-size: 1.8rem;
+  margin-bottom: 50px !important;
   font-style: italic;
   text-decoration: 3px underline var(--action-color);
+  color: var(--font-color);
 }
 
 .skill-text-section-content {
-  margin: 0 auto;
+  margin: 0 auto !important;
   width: 80%;
-  font-size: 1.1rem;
-  line-height: 1.5;
+  color: var(--font-color);
 }
 
 .skill {
@@ -78,8 +77,12 @@
     margin: 0 auto;
   }
 
-  .skill-card {
+  .skill-card-animation-wrapper {
     width: 31%;
+  }
+
+  .skill-card {
+    width: 95%;
   }
 }
 
