--- a/react-portfolio/src/components/Contact/styles.css
+++ b/react-portfolio/src/components/Contact/styles.css
@@ -1,6 +1,7 @@
 .contact {
-  background-color: var(--main-color);
-  height: 82vh;
+  overflow: hidden;
+  background-color: var(--darker-background-color);
+  min-height: 100vh;
   padding: var(--vertical-padding) 0;
   text-align: center;
   color: var(--white);
@@ -11,7 +12,8 @@
   width: 90%;
 }
 
-.contact-container > h1 {
+.contact-heading {
+  font-style: italic;
   color: white;
 }
 
@@ -25,14 +27,16 @@ form {
 
 input,
 textarea {
+  background-color: rgba(0, 0, 0, 0%);
   display: block;
-  border: none;
+  border: 1px solid white;
   border-radius: var(--border-radius);
   margin: 20px auto;
   padding: 10px;
   width: 100%;
   max-width: 500px;
   font-family: europa, sans-serif;
+  color: white;
 }
 
 textarea {
@@ -41,26 +45,33 @@ textarea {
 
 input:focus,
 textarea:focus {
-  outline: 1px solid var(--action-color);
+  outline: none;
+  border: 2px solid white;
+}
+
+::placeholder {
+  color: white;
+  font-style: italic;
 }
 
 .submit-btn {
-  background-color: var(--action-color);
+  background-color: rgba(0, 0, 0, 0%);
   border: 2px solid;
-  border-color: var(--action-color);
+  border-color: white;
   border-radius: var(--border-radius);
-  width: 100px;
+  padding: 10px 20px;
   font-size: 1.3rem;
   color: var(--white);
+  text-transform: uppercase;
   cursor: pointer;
   transition: background-color 0.5s ease-out, border-color 0.5s ease-out,
     color 0.5s ease-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
 }
 
 .submit-btn:hover {
   background-color: var(--main-color);
-  border-color: var(--action-color);
-  color: var(--action-color);
+  color: var(--darker-background-color);
   transition: background-color 0.5s ease-out, border-color 0.5s ease-out,
     color 0.5s ease-out;
 }
@@ -76,16 +87,17 @@ textarea:focus {
 }
 
 .icon-container {
-  background-color: var(--main-color);
-  border: 2px solid var(--white);
+  background-color: none;
+  border: 2px solid white;
   border-radius: var(--border-radius);
   margin: 0 20px;
   width: 60px;
   height: 60px;
   transition: background-color 0.5s ease-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
 }
 
-.icon-container > i {
+.icon-container > svg {
   position: relative;
   top: 9px;
   font-size: 40px;
@@ -98,8 +110,8 @@ textarea:focus {
   border: 2px solid var(--main-color);
 }
 
-.icon-container > i:hover {
-  color: var(--main-color);
+.icon-container > svg:hover {
+  color: var(--darker-background-color);
 }
 
 @media only screen and (min-width: 1200px) {
