--- a/react-portfolio/src/components/Navbar/styles.css
+++ b/react-portfolio/src/components/Navbar/styles.css
@@ -1,11 +1,11 @@
-a {
+.navbar a {
   max-width: 200px;
   text-decoration: none;
   border-bottom: 2px solid white !important;
   color: var(--font-color);
 }
 
-a:hover {
+.navbar a:hover {
   border-bottom: 1px solid var(--action-color) !important;
 }
 
