--- a/react-portfolio/src/components/Skills/styles.css
+++ b/react-portfolio/src/components/Skills/styles.css
@@ -1,5 +1,5 @@
 .skills {
-  background-color: var(--main-color-light);
+  /* background-color: var(--main-color-light); */
   min-height: 80vh;
   padding: var(--vertical-padding) 0;
   text-align: center;
@@ -23,46 +23,6 @@
 
 .skill-card-animation-wrapper {
   width: 95%;
-}
-
-.skill-card {
-  background-color: white;
-  border-radius: var(--border-radius);
-  margin: 20px auto;
-  width: 100%;
-  height: 100%;
-  padding: 30px 0;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.skill-icon-container {
-  display: flex;
-  background-color: var(--action-color);
-  border-radius: 50px;
-  width: 70px;
-  height: 70px;
-  margin: 10px auto;
-}
-
-.skill-icon-container > svg {
-  position: relative;
-  top: 22%;
-  left: 22%;
-  font-size: 2.5rem;
-  color: white;
-}
-
-.skill-text-section-heading {
-  margin-bottom: 50px !important;
-  font-style: italic;
-  text-decoration: 3px underline var(--action-color);
-  color: var(--font-color);
-}
-
-.skill-text-section-content {
-  margin: 0 auto !important;
-  width: 80%;
-  color: var(--font-color);
 }
 
 .skill {
