--- a/react-portfolio/src/components/Contact/styles.css
+++ b/react-portfolio/src/components/Contact/styles.css
@@ -1,6 +1,6 @@
 .contact {
   overflow: hidden;
-  background-color: var(--darker-background-color);
+  background-color: #002000;
   min-height: 100vh;
   padding: var(--vertical-padding) 0;
   text-align: center;
@@ -12,13 +12,55 @@
   width: 90%;
 }
 
+.contact-card {
+  background-color: white;
+  border-radius: 25px;
+  margin: 0 auto;
+  height: 1000px;
+  width: 600px;
+}
+
 .contact-heading {
   font-style: italic;
-  color: white;
+  color: var(--font-color);
 }
 
 .contact-container > p {
   font-size: 1.1rem;
+}
+
+.icon-section {
+  display: flex;
+  justify-content: center;
+  padding: 40px 0 30px;
+}
+
+.icon-container {
+  background-color: var(--white);
+  border: 1px solid white;
+  border-radius: var(--border-radius);
+  margin: 0 20px;
+  width: 60px;
+  height: 60px;
+  transition: background-color 0.5s ease-out;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+}
+
+.icon-container:hover {
+  background-color: var(--darker-background-color);
+  border: 1px solid var(--main-color);
+}
+
+.icon-container > svg {
+  position: relative;
+  top: 9px;
+  font-size: 40px;
+  color: var(--darker-background-color);
+  transition: color 0.5s ease-out;
+}
+
+.icon-container > svg:hover {
+  color: white;
 }
 
 form {
@@ -29,14 +71,14 @@ input,
 textarea {
   background-color: rgba(0, 0, 0, 0%);
   display: block;
-  border: 1px solid white;
+  border: 1px solid var(--darker-background-color);
   border-radius: var(--border-radius);
   margin: 20px auto;
   padding: 10px;
   width: 100%;
   max-width: 500px;
   font-family: europa, sans-serif;
-  color: white;
+  color: var(--font-color);
 }
 
 textarea {
@@ -46,22 +88,22 @@ textarea {
 input:focus,
 textarea:focus {
   outline: none;
-  border: 2px solid white;
+  border: 1px solid var(--action-color);
 }
 
 ::placeholder {
-  color: white;
+  color: var(--font-color);
   font-style: italic;
 }
 
 .submit-btn {
-  background-color: rgba(0, 0, 0, 0%);
-  border: 2px solid;
+  background-color: var(--main-color);
+  border: 1px solid;
   border-color: white;
   border-radius: var(--border-radius);
   padding: 10px 20px;
   font-size: 1.3rem;
-  color: var(--white);
+  color: var(--darker-background-color);
   text-transform: uppercase;
   cursor: pointer;
   transition: background-color 0.5s ease-out, border-color 0.5s ease-out,
@@ -70,48 +112,14 @@ textarea:focus {
 }
 
 .submit-btn:hover {
-  background-color: var(--main-color);
-  color: var(--darker-background-color);
+  background-color: var(--darker-background-color);
+  color: var(--white);
   transition: background-color 0.5s ease-out, border-color 0.5s ease-out,
     color 0.5s ease-out;
 }
 
 .submit-btn:focus {
   outline: none;
-}
-
-.icon-section {
-  display: flex;
-  justify-content: center;
-  padding: 40px 0 30px;
-}
-
-.icon-container {
-  background-color: none;
-  border: 2px solid white;
-  border-radius: var(--border-radius);
-  margin: 0 20px;
-  width: 60px;
-  height: 60px;
-  transition: background-color 0.5s ease-out;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
-}
-
-.icon-container > svg {
-  position: relative;
-  top: 9px;
-  font-size: 40px;
-  color: white;
-  transition: color 0.5s ease-out;
-}
-
-.icon-container:hover {
-  background-color: var(--white);
-  border: 2px solid var(--main-color);
-}
-
-.icon-container > svg:hover {
-  color: var(--darker-background-color);
 }
 
 @media only screen and (min-width: 1200px) {
