--- a/react-portfolio/src/components/Contact/styles.css
+++ b/react-portfolio/src/components/Contact/styles.css
@@ -1,7 +1,6 @@
 .contact {
-  overflow: hidden;
-  background-color: #002000;
-  min-height: 100vh;
+  background-color: #fafafa;
+  min-height: 80vh;
   padding: var(--vertical-padding) 0;
   text-align: center;
   color: var(--white);
@@ -16,11 +15,12 @@
   background-color: white;
   border-radius: 25px;
   margin: 0 auto;
-  height: 1000px;
   width: 600px;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
 }
 
 .contact-heading {
+  margin-bottom: 50px !important;
   font-style: italic;
   color: var(--font-color);
 }
@@ -101,6 +101,7 @@ textarea:focus {
   border: 1px solid;
   border-color: white;
   border-radius: var(--border-radius);
+  margin-bottom: 30px;
   padding: 10px 20px;
   font-size: 1.3rem;
   color: var(--darker-background-color);
