--- a/react-portfolio/src/components/Navbar/styles.css
+++ b/react-portfolio/src/components/Navbar/styles.css
@@ -33,16 +33,15 @@
 
 .navbar-buttons-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
 }
 
 .navbar-button {
   background-color: white !important;
   border: none !important;
-  border: 1px solid var(--action-color) !important;
-  border-radius: 25px !important;
-  width: 200px;
+  border-radius: 5px !important;
+  width: fit-content;
   height: 40px;
   font-size: 18px !important;
   color: var(--font-color) !important;
@@ -50,8 +49,8 @@
 }
 
 .navbar-button:hover {
-  background-color: var(--action-color) !important;
-  color: white !important;
+  background-color: #e3ffec86 !important;
+  color: #009916 !important;
 }
 
 .navbar-menu-item {
