Updated background color and min-height. Added margin-bottom to heading.

--- a/react-portfolio/src/components/Skills/styles.css
+++ b/react-portfolio/src/components/Skills/styles.css
@@ -1,6 +1,6 @@
 .skills {
-  /* background-color: var(--main-color-light); */
-  min-height: 80vh;
+  background-color: #fafafa;
+  min-height: 90vh !important;
   padding: var(--vertical-padding) 0;
   text-align: center;
 }
@@ -11,6 +11,7 @@
 }
 
 .skills-heading {
+  margin-bottom: 50px !important;
   font-style: italic;
   color: var(--font-color);
 }
