Added important to styling rules.
Create rules that affer icon-container and icon svg.

--- a/react-portfolio/src/components/Contact/darkStyles.css
+++ b/react-portfolio/src/components/Contact/darkStyles.css
@@ -19,15 +19,15 @@
 }
 
 .icon-container:hover {
-  background-color: #00ff94;
-  border: 1px solid #00ff94;
+  background-color: #00ff94 !important;
+  border: 1px solid #00ff94 !important;
 }
 
 .icon-container > svg {
   color: #00ff94;
 }
 
-.icon-container > svg:hover {
+.icon-container:hover.icon-container > svg {
   color: #0f0f1b;
 }
 
