--- a/react-portfolio/src/components/Contact/styles.css
+++ b/react-portfolio/src/components/Contact/styles.css
@@ -14,7 +14,7 @@
 .contact-card {
   background-color: white;
   border-radius: 25px;
-  margin: 0 auto;
+  margin: 0 auto 50px;
   width: 600px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
 }
