--- a/react-portfolio/src/components/SkillCard/darkStyles.css
+++ b/react-portfolio/src/components/SkillCard/darkStyles.css
@@ -1,7 +1,9 @@
 .skill-card {
   background-color: transparent !important;
-  border: 1px solid #00ff94;
-  box-shadow: 0px 4px 10px #00ff94;
+  /* border: 1px solid #00ff94; */
+  border: 1px solid #fff;
+  /* box-shadow: 0px 2px 10px #00ff94; */
+  box-shadow: 0px 2px 10px #fff;
 }
 
 .skill-text-section-heading,
