--- a/react-portfolio/src/components/Contact/darkStyles.css
+++ b/react-portfolio/src/components/Contact/darkStyles.css
@@ -4,18 +4,18 @@
   background: linear-gradient(
     90deg,
     rgba(15, 15, 27, 1) 0%,
-    rgba(81, 81, 89, 1) 60%,
-    rgba(135, 135, 141, 1) 80%,
     rgba(255, 255, 255, 1) 100%
   );
 }
 
 .contact-card {
-  background-color: transparent;
+  /* background-color: transparent; */
+  background-color: #fff;
   /* border: 1px solid #00ff94; */
   border: 1px solid #fff;
   /* box-shadow: 0px 4px 10px #00ff94; */
-  box-shadow: 0px 2px 10px #fff;
+  /* box-shadow: 0px 2px 10px #fff; */
+  box-shadow: 0px 0px 10px #14205f80;
 }
 
 .contact-heading,
@@ -24,42 +24,45 @@
 }
 
 .icon-container {
+  border: none;
   background-color: transparent;
-  border: 1px solid #00ff94;
 }
 
 .icon-container:hover {
+  border: none;
   background-color: #00ff94 !important;
-  border: 1px solid #00ff94 !important;
 }
 
 .icon-container > svg {
-  /* color: #00ff94; */
-  color: #fff;
+  color: #00ff94;
 }
 
 .icon-container:hover.icon-container > svg {
-  color: #0f0f1b;
+  color: white;
 }
 
 input,
 textarea {
   /* border: 1px solid #00ff94; */
-  border: 1px solid #fff;
+  border: 1px solid silver;
 }
 
 ::placeholder {
-  color: white;
+  /* color: white; */
+  color: silver;
 }
 
 .submit-btn {
+  border: none;
   background-color: transparent;
-  border: 1px solid #00ff94;
-  color: white;
-  transition: all 1.25s ease-in-out;
+  /* border: 1px solid #00ff94; */
+  /* color: white; */
+  color: #00ff94;
+  transition: all 0.5s ease-in-out !important;
 }
 
 .submit-btn:hover {
+  border: none;
   background-color: #00ff94;
-  color: black;
+  color: white;
 }
