--- a/react-portfolio/src/components/SkillCard/darkStyles.css
+++ b/react-portfolio/src/components/SkillCard/darkStyles.css
@@ -1,14 +1,17 @@
 .skill-card {
-  background-color: transparent !important;
+  /* background-color: transparent !important; */
+  background-color: #fff;
   /* border: 1px solid #00ff94; */
   border: 1px solid #fff;
   /* box-shadow: 0px 2px 10px #00ff94; */
-  box-shadow: 0px 2px 10px #fff;
+  /* box-shadow: 0px 2px 6px #fff; */
+  box-shadow: 0px 0px 10px #14205f80;
 }
 
 .skill-text-section-heading,
 .skill-text-section-content {
   font-family: Montserrat, sans-serif !important;
   font-weight: 600 !important;
-  color: white;
+  /* color: white; */
+  color: var(--font-color);
 }
