--- a/react-portfolio/src/components/Skills/darkStyle.css
+++ b/react-portfolio/src/components/Skills/darkStyle.css
@@ -1,13 +1,7 @@
 .skills {
   /* background-color: #0f0f1b !important; */
-  background: rgb(15, 15, 27);
-  background: linear-gradient(
-    90deg,
-    rgba(15, 15, 27, 1) 0%,
-    rgba(81, 81, 89, 1) 60%,
-    rgba(135, 135, 141, 1) 80%,
-    rgba(255, 255, 255, 1) 100%
-  );
+  background: rgb(15,15,27);
+  background: linear-gradient(90deg, rgba(15,15,27,1) 0%, rgba(255,255,255,1) 100%);
 }
 
 .skills-heading {
