--- a/react-portfolio/src/components/SkillCard/styles.css
+++ b/react-portfolio/src/components/SkillCard/styles.css
@@ -1,11 +1,12 @@
 .skill-card {
   background-color: white;
+  border: 1px solid #fff;
   border-radius: var(--border-radius);
   margin: 20px auto;
   width: 100%;
   height: 100%;
   padding: 30px 0;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 10px #14205f80;
 }
 
 .skill-icon-container {
@@ -36,4 +37,15 @@
   margin: 0 auto !important;
   width: 80%;
   color: var(--font-color);
+}
+
+.skill-text-section-heading,
+.skill-text-section-content {
+  font-family: Montserrat, sans-serif !important;
+  font-weight: 600 !important;
+  color: var(--font-color);
+}
+
+.skill-text-section-content > span {
+  color: #1aff8dd6 !important
 }
