Added Permanent Marker font.

--- a/react-portfolio/src/components/Home/styles.css
+++ b/react-portfolio/src/components/Home/styles.css
@@ -18,6 +18,7 @@
 .about-heading {
   position: relative;
   top: 60px;
+  font-family: 'Permanent Marker', cursive !important; 
   font-style: italic;
   color: var(--font-color);
 }
