--- a/react-portfolio/src/components/Home/styles.css
+++ b/react-portfolio/src/components/Home/styles.css
@@ -18,7 +18,8 @@
 .about-heading {
   position: relative;
   top: 60px;
-  font-family: 'Permanent Marker', cursive !important; 
+  /* font-family: 'Permanent Marker', cursive !important;  */
+  font-family: 'Crete Round', serif !important;
   font-style: italic;
   color: var(--font-color);
 }
