--- a/react-portfolio/src/components/Home/styles.css
+++ b/react-portfolio/src/components/Home/styles.css
@@ -19,7 +19,7 @@
   position: relative;
   top: 60px;
   /* font-family: 'Permanent Marker', cursive !important;  */
-  font-family: 'Crete Round', serif !important;
+  font-family: var(--main-font) !important;
   font-style: italic;
   color: var(--font-color);
 }
