--- a/react-portfolio/src/components/SkillCard/styles.css
+++ b/react-portfolio/src/components/SkillCard/styles.css
@@ -28,6 +28,7 @@
 
 .skill-text-section-heading {
   margin-bottom: 50px !important;
+  font-family: var(--main-font) !important;
   font-style: italic;
   /* text-decoration: 3px underline var(--action-color); */
   color: var(--font-color);
@@ -39,7 +40,6 @@
   color: var(--font-color);
 }
 
-.skill-text-section-heading,
 .skill-text-section-content {
   font-family: Montserrat, sans-serif !important;
   font-weight: 600 !important;
