--- a/react-portfolio/src/App.css
+++ b/react-portfolio/src/App.css
@@ -13,7 +13,7 @@
   --darker-background-color: #009916;
   --darkest-background-color: #003000;
 
-  --main-font: 'Crete Round', serif;
+  --main-font: 'Permanent Marker', cursive !important; 
 }
 
 ::-webkit-scrollbar {
