--- a/react-portfolio/src/components/Navbar/styles.css
+++ b/react-portfolio/src/components/Navbar/styles.css
@@ -40,27 +40,21 @@
 .navbar-button {
   background-color: white !important;
   border: none !important;
-  border-bottom: 1px solid var(--action-color) !important;
-  border-radius: 0 !important;
+  border-radius: 25px !important;
   width: calc(100% + 20px) !important;
   height: 40px;
-  font-size: 18px !important;
+  font-size: 20px !important;
+  font-weight: bold !important;
+  font-family: var(--main-font) !important;
   color: var(--font-color) !important;
+
   transition: all 0.5s ease-in-out !important;
 }
 
 .navbar-button:hover {
-  /* background-color: #e3ffec86 !important;
-  color: #009916 !important; */
-
-  background: rgb(26, 255, 140);
-  background: linear-gradient(
-    360deg,
-    rgba(26, 255, 140, 1) 0%,
-    rgba(236, 255, 0, 1) 100%
-  );
-
-  border-radius: 5px !important;
+  background: #00cf98;
+  background: linear-gradient(to right, #00cf98 0%, #ccff11 100%);
+  border-radius: 25px !important;
   color: white !important;
 }
 
