--- a/react-portfolio/src/components/Navbar/styles.css
+++ b/react-portfolio/src/components/Navbar/styles.css
@@ -1,5 +1,5 @@
 .navbar a {
-  max-width: 200px;
+  width: 125px;
   text-decoration: none;
   color: var(--font-color);
 }
@@ -41,20 +41,29 @@
   background-color: white !important;
   border: none !important;
   border-radius: 25px !important;
-  width: calc(100% + 20px) !important;
+
+  position: relative;
+  right: 0;
+
+  width: calc(100%) !important;
   height: 40px;
   font-size: 20px !important;
   font-weight: bold !important;
   font-family: var(--main-font) !important;
   color: var(--font-color) !important;
 
-  transition: all 0.5s ease-in-out !important;
+  transition: all 0.25s ease-in-out !important;
 }
 
 .navbar-button:hover {
   background: #00cf98;
   background: linear-gradient(to right, #00cf98 0%, #ccff11 100%);
   border-radius: 25px !important;
+
+  position: relative;
+  right: 25px;
+
+  width: calc(100% + 50px) !important;
   color: white !important;
 }
 
