--- a/react-portfolio/src/components/SkillCard/styles.css
+++ b/react-portfolio/src/components/SkillCard/styles.css
@@ -2,7 +2,7 @@
   background-color: white;
   border: 1px solid #fff;
   border-radius: var(--border-radius);
-  margin: 20px auto;
+  margin: 0 auto;
   width: 100%;
   height: 100%;
   padding: 30px 0;
@@ -13,7 +13,7 @@
   display: flex;
   background: rgb(26, 255, 140);
   background: linear-gradient(
-    360deg,
+    90deg,
     rgba(26, 255, 140, 1) 0%,
     rgba(236, 255, 0, 1) 100%
   );
